// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BrMetaDirective ngOnChanges when there is a template should surround the template with meta 1`] = `
<div>
  <span />
  <span />
  
</div>
`;

exports[`BrMetaDirective ngOnDestroy should clear the container 1`] = `
<div>
  
</div>
`;
